<resources>
    <string name="app_name">Breaking News</string>
    <string name="error_message">Failed to get results,Please try again!</string>
    <string name="link">Link</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="general">General</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="main_notification_channel_name">Primary</string>
    <string name="authorHeader">written by: </string>
    <string name="sourceHeader">Source: </string>
    <string name="dateHeader">Date:</string>
    <string name="descriptionHeader">Description :</string>
    <string name="contentHeader">Content:</string>
<string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="content_authority">com.example.kmoue.breakingnews</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
